# iSSL

./: .gitignore  README.md  ViT-S16.slurm  move_data.sh  pyproject.toml
configs/MAE/: config.yaml
configs/hiera/: config.yaml
configs/probe_MAE/: config.yaml
core/data/: __init__.py  data.py  data_old.py  imagenet-1k
core/layers/: __init__.py  attention.py  attentive_probe.py  drop_path.py  ffn.py  patchify.py  vit_block.py
core/models/: ViT.py  __init__.py  decoder.py
core/utils/: __init__.py  lr_scheduler.py
data/: __init__.py  data.py  datatest.ipynb
dino/: __init__.py
dino/layers/: __init__.py
dino/models/: __init__.py
helpers/: PCA.py  __init__.py  cosine_similarity.py
hiera/: __init__.py  hierareadme.md
hiera/helpers/: utils.py
hiera/layers/: __init__.py  attention_block.py  ffn.py  patchify.py  vit_block.py
hiera/model/: __init__.py  hiera.py
i-jepa/: __init__.py
methods/dino/: dino_head.py
methods/hiera/: __init__.py  decoder.py  hiera_attention.py  hiera_vit_block.py  model.py
output/wandb/: latest-run
scripts/: probe_MAE.py  probe_MAE_adam.py  train_MAE.py  train_MAE_adam.py  train_hiera.py
scripts/utils/: ddp_setup.py
tests/: eval_MAE.py
tests/utils/: attentive_probe.py  linear_probe.py
wandb/sweep-1k7rr3do/: config-1eyoshh2.yaml  config-2m7sz62h.yaml  config-4eriyr1r.yaml  config-5nr15gtx.yaml  config-5x8a1oog.yaml  config-79848aac.yaml  config-c2ws9crr.yaml  config-e1gb9pu0.yaml  config-emssnfjf.yaml  config-p3e5qpw1.yaml  config-q2k1a06u.yaml  config-r8w7zns2.yaml  config-t3flovd5.yaml
(+105 files in other folders)
