[build-system]
requires = ["setuptools>=77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "issl"
version = "0.1.0"
description = "Image-based Self-Supervised Learning research"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
include = ["dino*", "hiera*", "helpers*", "i-jepa*", "data*"]
